fix for cropped images in product and company left panel

--- a/src/app/company/company-common/company-left-panel/company-left-panel.component.scss
+++ b/src/app/company/company-common/company-left-panel/company-left-panel.component.scss
@@ -40,7 +40,7 @@
     width: $img-container-width;
     position: absolute;
     border-radius: 4px;
-    background-image: linear-gradient(180deg, rgba(0,0,0,0.00) 25%, rgba(24,27,49,0.90) 100%);
+    background-image: linear-gradient(transparent 23.95%, rgba(24, 27, 48, 0.4));
   }
 
   // adjustmnets for up to lg
@@ -77,7 +77,7 @@
       height: inherit;
       width: inherit;
       border-radius: 4px;
-      object-fit: cover; // hopefully fixes image placement
+      object-fit: contain; // hopefully fixes image placement
     }
   }
 }
@@ -86,7 +86,7 @@
   height: 218px;
   width: 290px;
   border-radius: 4px;
-  object-fit: cover; // hopefully fixes image placement
+  object-fit: contain; // hopefully fixes image placement
 }
 
 .company-title-wrapper {
