--- a/src/app/m-product/product-common/product-label-left-panel-content/product-label-left-panel-content.component.scss
+++ b/src/app/m-product/product-common/product-label-left-panel-content/product-label-left-panel-content.component.scss
@@ -109,9 +109,8 @@ ul {
         position: absolute;
         border-radius: 4px;
         // background: linear-gradient(180deg, rgba(0,0,0,0) 0%, #181B31 100%);
-        background-image: linear-gradient(180deg, rgba(0,0,0,0.00) 25%, rgba(24,27,49,0.90) 100%);
+        background-image: linear-gradient(transparent 23.95%, rgba(24, 27, 48, 0.4));
       }
-
 
       // adjustmnets for up to lg
       &-small {
@@ -151,7 +150,7 @@ ul {
           height: inherit;
           width: inherit;
           border-radius: 4px;
-          object-fit: cover; // hopefully fixes image placement
+          object-fit: contain; // hopefully fixes image placement
         }
       }
     }
@@ -159,7 +158,7 @@ ul {
       height: 218px;
       width: 290px;
       border-radius: 4px;
-      object-fit: cover; // hopefully fixes image placement
+      object-fit: contain; // hopefully fixes image placement
     }
   }
 }
